[package]
name = "sandbox"
version = "0.1.0"
description = "Transmission Sandbox"
authors = ["Artificial Natures"]
license = "Copyright Artificial Natures 2024"
repository = "https://github.com/artificial-natures/transmission"
edition = "2021"

[[bin]]
name = "sandbox"
path = "main.rs"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
transmission = { path = "../transmission" }
transmission-ui-bevy = { path = "../ui/bevy" }
transmission-ui-cli = { path = "../ui/cli" }
