[package]
name = "transmission"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "lib.rs"

[dependencies]
iroh = { version = "0.30.0", features = [] }
iroh-blobs = "0.30.0"
iroh-gossip = "0.30.0"
iroh-docs = { version = "0.30.0", features = ["rpc"] }
uuid = { version = "1.11.0", features = ["v4", "fast-rng", "macro-diagnostics", "js"] }
