[package]
name = "transmission"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "lib.rs"

[dependencies]
transmission-ui-bevy = { path = "../ui/bevy" }
transmission-ui-cli = { path = "../ui/cli" }
tokio = "1.43.0"
uuid = { version = "1", features = ["v4", "fast-rng", "macro-diagnostics", "js"] }
iroh = "0.30"
iroh-docs = { version = "0.30", features = ["rpc"] }
iroh-blobs = { version = "0.30", features = ["rpc"] }
iroh-gossip = { version = "0.30", features = ["rpc"] }
