[package]
name = "transmission"
version = "0.1.0"
edition = "2021"

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # v4 = random UUIDs, v7 = random UUIDs with unix timestamp
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]